# DataScience

./: .gitignore  Makefile  pyproject.toml
data/: UFO Data.xlsx  routa.csv
notebooks/: aggregate.ipynb  countries.ipynb  dob.ipynb  exercises.ipynb  groupby.ipynb  loops.ipynb  misc.ipynb  mortgage.ipynb  ufo.ipynb  work_misc.ipynb
